# universeide

./: AGENTS.md  API.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENTS.md  README.md  advanced_examples.py  deploy.sh  examples.py  index.html  pyproject.toml  run.py  universe.db  universe_a2a.py  universe_acl.py  universe_agent_factory.py  universe_ai_advanced.py  universe_ai_assist.py  universe_alert.py  universe_analysis2.py  universe_analytics.py  universe_api.py  universe_api2.py  universe_api_client.py  universe_audit.py  universe_automate.py  universe_batch.py  universe_build.py  universe_byok.py  universe_cache.py  universe_cache2.py  universe_cdn.py  universe_circuit.py  universe_cli.py  universe_cloud.py  universe_cloudops.py  universe_codegen.py  universe_collab.py  universe_collab2.py  universe_collab3.py  (+124 more)
deployment/: Dockerfile  docker-compose.yml  kubernetes.yml  universe-k8s.yaml  universe_deploy.py
deployment/helm/: values.yaml
docs/: API_REFERENCE.md  CHANGELOG.md  COMPARISON.md  LINUX_MACOS.md  MANUAL.md  PRODUCTION.md  QUICK_START.md  TEST_RESULTS.md  UAT_SIGN_OFF.md  WINDOWS.md
extension/: README.md  extension.js  package.json
extension/snippets/: javascript.json  python.json
ide/backend/: __init__.py
ide/backend/api/: main.py
ide/backend/runtime/: orchestrator.py
ide/backend/security/: analysis.py
ide/container/: Dockerfile
tests/: test_complete.py  test_improved.py  test_universe.py
universe/: __init__.py
universe/agents/: fleet.py
universe/core/: orchestrator.py
universe/tools/: __init__.py  toolbelt.py
(+1 files in other folders)
